Fixed a problem that caused layout collapse on some websites.

--- a/Shared (Extension)/src/popup/nord.css
+++ b/Shared (Extension)/src/popup/nord.css
@@ -157,10 +157,6 @@ html {
   color: var(--n-color-text);
   accent-color: var(--n-color-accent);
 }
-.n-reset,
-.n-reset body {
-  overscroll-behavior-block: none;
-}
 :where(.n-reset a) {
   color: var(--n-color-text-link);
   text-decoration: underline;
